# RInS_TeamMu

./: README.md  TODO.txt  rosbatch  usefull_commands
devel/: .catkin  .rosinstall  setup.sh
exercise2/: CMakeLists.txt
exercise2/launch/: movement.launch
exercise2/scripts/: movement.py
exercise2/src/: move_client.cpp  move_service.cpp
exercise2/srv/: TurtleMovement.srv
exercise3/map/: map.pgm  map.xcf  map_fixed.pgm  map_fixed.xcf  test_map.yaml  test_map_final.pgm
exercise3/scripts/: nav_goal.py
exercise3/src/: nav_goal.cpp
exercise4/launch/: amcl_demo_sim.launch  pixelfinder.launch
exercise4/maps/: simulation_map.pgm
exercise4/meshes/: ring.dae
exercise4/scripts/: breadcrumbs  pixelfinder
exercise4/worlds/: rins.world
exercise5/: package.xml
exercise5/launch/: amcl_demo.launch  export.launch
exercise5/scripts/: detect_rings
exercise5/tests/: step_by_step_ring_detection.py
exercise6/: CMakeLists.txt  package.xml
exercise6/launch/: amcl_demo.launch  export.launch
exercise6/scripts/: detect_rings  grab_rings  main
exercise8/: CMakeLists.txt
pcl_demos/: CMakeLists.txt  package.xml
robot/: CMakeLists.txt  package.xml
robot/launch/: amcl_demo.launch  circle_detect.launch  circle_sense.launch  controller.launch  cylinder_detect.launch  cylinder_filter.launch  main.launch  nav_manager.launch  numbers_detect.launch  qr_detect.launch  sense.launch  sound.launch  start_robot.launch
robot/map/: map.pgm  map_fixed.pgm  map_fixed_rotation.pgm  map_fixed_rotation_final.pgm  map_without_cylinders.pgm  map_without_cylinders.xcf  simulation_map.pgm  simulation_map.yaml  square_array  square_array_debug  test_map.pgm  test_map.yaml
robot/msg/: Circle.msg  Cylinder.msg  MoveForward.msg  PCLCylinder.msg  Rotate.msg
robot/scripts/: circle_detect.py  circle_sense.py  classifier.py  color_detection.py  controller.py  cylinder_color.py  cylinder_filter.py  detect_rings  main  main_old.py  map_square_gen.py  nav_manager.py  numbers_detect.py  qr_detect.py  ring_graber.py  test_pub.py
task1/: CMakeLists.txt  package.xml
(+32 files in other folders)
